syntax = "proto3";

package nginxlog;

// Messaggio che rappresenta un log Nginx in formato JSON
message NginxLog {
  string time = 1;                     // Timestamp ISO8601
  string remote_addr = 2;             // IP del client
  string request = 3;                 // Metodo + URI + protocollo
  string status = 4;                  // Codice HTTP
  string http_user_agent = 5;         // User-Agent del client
  string request_time = 6;            // Tempo totale della richiesta
  string upstream_response_time = 7;  // Tempo di risposta del backend
}

// Servizio gRPC che riceve i log
service NginxLogReceiver {
  rpc SendLog (NginxLog) returns (Ack);
}

// Risposta di conferma
message Ack {
  string message = 1;
}
